# my-calc

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: calc_cicd.yml
features/: dict.feature  environment.py  example.feature  table.feature
features/steps/: steps.py
git_hooks/: pre-commit
src/my_calc/: __about__.py  __init__.py  calculator.py
tests/: test_calculator.py
