[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-calc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Jo達o Antonio Ferreira", email = "joao.parana@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jo達o Antonio Ferreira/my-calc#readme"
Issues = "https://github.com/Jo達o Antonio Ferreira/my-calc/issues"
Source = "https://github.com/Jo達o Antonio Ferreira/my-calc"

[tool.hatch.version]
path = "src/my_calc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

# [tool.hatch.envs.default]
# dependencies = ["unittest"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_calc tests}"

[tool.coverage.run]
source_pkgs = ["my_calc", "tests"]
branch = true
parallel = true
omit = [
  "src/my_calc/__about__.py",
]

[tool.coverage.paths]
my_calc = ["src/my_calc", "*/my-calc/src/my_calc"]
tests = ["tests", "*/my-calc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
